--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=sbb-shopapi
+# 데이터베이스 설정
+spring.datasource.url=jdbc:mysql://localhost:3313/sbbdb
+spring.datasource.username=root
+spring.datasource.password=mypw123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis 설정
+mybatis.mapper-locations=classpath:mappers/*.xml
+
+# 네이버 API 정보
+naver.client.id=YOUR_CLIENT_ID
+naver.client.secret=YOUR_CLIENT_SECRET
