--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mappers/*.xml
 
 # 네이버 API 정보
-naver.client.id=YOUR_CLIENT_ID
-naver.client.secret=YOUR_CLIENT_SECRET
+naver.client.id=pC3GjeCEBSu0WZctBhmR
+naver.client.secret=YSXtUl8Tom
